# chatterbox-archive

./: pyproject.toml
src/chatterbox/models/s3gen/: xvector.py
src/chatterbox/models/t3/: t3.py
src/chatterbox/models/t3/inference/: t3_hf_backend.py
src/chatterbox/models/t3/modules/: perceiver.py
