[project]
name = "chatterbox-tts"
version = "0.1.4"
description = "Chatterbox: Open Source TTS and Voice Conversion by Resemble AI"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = {file = "LICENSE"}
authors = [
    {name = "resemble-ai", email = "engineering@resemble.ai"}
]
dependencies = [
    "numpy>=2.2.6",
    "librosa==0.11.0",
    "s3tokenizer>=0.2.0",
    # "torch==2.5.0",
    "torch==2.7.0",
    # "torchaudio==2.5.0",
    "torchaudio==2.7.0",
    "transformers==4.46.3",
    "diffusers==0.29.0",
    "resemble-perth==1.0.1",
    "conformer==0.3.2",
    "safetensors==0.5.3",
    "pykakasi==2.3.0",
    "typer>=0.9.0,<0.10.0",  # Pin typer version
    "pydantic>=1.7.4,<1.8.0", # Pin pydantic version
    "onnx>=1.19.0",
    "ml_dtypes>=0.5.0"
]

[project.optional-dependencies]
# uv sync --extra gradio
gradio = [
    "gradio>=5.44.1",
]
# uv sync --extra multi-lingual
multi-lingual = [
    "spacy-pkuseg",
    "spacy>=3.6.0,<3.7.0",   # Pin spacy version
    "russian-text-stresser @ git+https://github.com/Vuizur/add-stress-to-epub",
]

[tool.uv]
prerelease = "allow"  # Allow pre-release versions

[project.urls]
Homepage = "https://github.com/resemble-ai/chatterbox"
Repository = "https://github.com/resemble-ai/chatterbox"



# --- Build system stuff ----
# [build-system]
# requires = ["setuptools>=61.0"]
# build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
# -- Alt build system
# [build-system]
# requires = ["hatchling"]
# build-backend = "hatchling.build"
